fixed broken layout

--- a/kosrud.github.io/.vitepress/theme/style/main/index.less
+++ b/kosrud.github.io/.vitepress/theme/style/main/index.less
@@ -8,6 +8,7 @@ html {
 
 body {
     font-size: @size;
+    overflow-y: scroll;
 }
 
 html,
